add defensive intel monitoring
